# wasmpac

./: .gitignore  README.md  build_mod.sh  eval.go  funcs.go  go.mod  pac.go  pac.wasm  pac_test.go  state.go
pac_mod/: Cargo.toml
pac_mod/src/: builtin.js  lib.rs
pkg/: fn.go  mem.go  pac.go
