[package]
name = "pac"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
wee_alloc = "0.4.5"
chrono = { version = "0.4.31", default-features = false }
getrandom = {version = "0.2.11", default-features = false, features = ["js"] }
boa_engine = "0.17.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
